third_party/rust/paste/tests/ui/env-non-string.stderr
error: expected string literal
 --> $DIR/env-non-string.rs:2:15
  |
2 |     fn [<env!(1.31)>]() {}
  |               ^^^^
