third_party/rust/paste/tests/ui/env-non-string.rs
paste::item! {
    fn [<env!(1.31)>]() {}
}

fn main() {}
